fix(ui): scrollbar removed from collapsed group layer
This issue is not related to style collisions in WET pages, those issues
are not addressed in this fix.

Closes #482

--- a/src/content/styles/modules/_toc.scss
+++ b/src/content/styles/modules/_toc.scss
@@ -44,7 +44,6 @@ $layer-item-height: rem(6.0);
 
         > li {
             position: relative;
-            overflow: auto;
         }
         // rotate the icon on the toggle button on open
         .md-toggle-icon {
